--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="keyword"
+      content="Firearms training, Timonium, Maryland, Firearm safety, Tactical shooting, Concealed carry, Defensive shooting, Pistol training, Rifle training, Shotgun training, Firearms courses, Marksmanship, Personal protection, Self-defense, Law enforcement training, Firearm laws, Range safety, Firearms instructor, Firearm training facility, Shooting drills, Tactical mindset"
     />
+    <meta
+    name="description"
+    content="WDFTRAINING LLC
+    Provides the finest firearms and tactics training available today. Whether you are in the military, law enforcement, or are a private citizen, we are here to assist you in the very best in quality, firearms training."
+  />
+    <meta name="author" content="Washington's Direct Firearm Training">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +33,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Kanit:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <title>Washington's Direct Firearms</title>
+    <title>Washington's Direct Firearm Training</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
